Fixed issue with no centering on safari

--- a/www/MainApp/css/socializer-custom.css
+++ b/www/MainApp/css/socializer-custom.css
@@ -4,6 +4,7 @@
 
 .socializer {
     width: fit-content;
+    width: webkit-fit-content;
     margin-left: auto;
     margin-right: auto;
     display: block;
